tests/baselines/reference/enumsWithMultipleDeclarations2.errors.txt
enumsWithMultipleDeclarations2.ts(1,6): error TS2567: Enum declarations can only merge with namespace declarations.
enumsWithMultipleDeclarations2.ts(5,6): error TS2567: Enum declarations can only merge with namespace declarations.
enumsWithMultipleDeclarations2.ts(9,6): error TS2567: Enum declarations can only merge with namespace declarations.


==== enumsWithMultipleDeclarations2.ts (3 errors) ====
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      A
    }
    
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      B = 1
    }
    
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
      C
    }